<resources>
    <string name="app_name">TED</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="feedback">Feedback</string>
    <string name="log_in">Log in</string>
    <string name="email">Email</string>
    <string name="dots">⋮</string>
    <string name="textview3">TextView</string>
    <string name="textview2">TextView</string>
    <string name="textview">TextView</string>
    <string name="mic">Mic</string>
    <string name="log_in_to_your_ted_account">Log in to your TED account</string>
    <string name="sync_my_list_and_history">Sync My List, and History.</string>
    <string name="no_talks">No talks</string>
    <string name="my_list">My List</string>
    <string name="history">History</string>
    <string name="likes">Likes</string>
    <string name="downloads">Downloads</string>


    <string name="you_want_to_se_something">You want to see something...</string>
    <string name="courageous">Courageous</string>
    <string name="funny">Funny</string>
    <string name="persuasive">Persuasive</string>
    <string name="ingenious">Ingenious</string>
    <string name="jaw_dropping">Jaw-dropping</string>
    <string name="beautiful">Beautiful</string>
    <string name="fascinating">Fascinating</string>
    <string name="inspiring">Inspiring</string>
    <string name="informative">Informative</string>

    <string name="general">General</string>
    <string name="limit_mobile_data_usage">Limit mobile data usage</string>
    <string name="ony_stream_hd_video_on_wi_fi">ony stream HD video on Wi-Fi.</string>
    <string name="allow_video_and_audio_to_play_while_your_device_is_locked_or_app_is_closed">allow video and audio to play while your device is locked or app is closed.</string>
    <string name="background_playback_on">Background playback on</string>
    <string name="notifications">Notifications</string>
    <string name="notify_me_when_new_talks_are_available">Notify me when new talks are available.</string>
    <string name="recomended_talks">Recomended talks</string>
    <string name="notify_me_of_talks_i_may_like">Notify me of talks i may like</string>
    <string name="language">Language</string>
    <string name="app_language">App language</string>
    <string name="system_default">System default</string>
    <string name="no_subtitles">No Subtitles</string>
    <string name="add_over_wi_fi_only">Add over Wi-Fi only</string>
    <string name="only_download_over_wi_fi">Only download over Wi-Fi.</string>
    <string name="claer_watch_history_from_this_device">Claer watch history from this device</string>
    <string name="clear_search_history">Clear search history</string>
    <string name="quality">Quality</string>
    <string name="ask_each_time">Ask each time</string>
    <string name="save_location">Save Location</string>
    <string name="internal_storage">Internal Storage</string>
    <string name="clear_watch_hiatory">Clear watch hiatory</string>
    <string name="privacy">Privacy</string>
    <string name="claer_search_history_from_this_device">Claer search history from this device</string>
    <string name="about">About</string>
    <string name="liscenses">Liscenses</string>
    <string name="liscense_details_for_open_source_software">Liscense details for open source software.</string>
    <string name="transaction_credits">Transaction credits</string>
    <string name="credit_details_for_talk_transactions">Credit details for talk transactions.</string>
    <string name="about_ted">About TED</string>
    <string name="build_version">Build version</string>
    <string name="_3_2_2">3.2.2</string>
    <string name="newest">Newest</string>
    <string name="ted_talks_india">TED Talks India</string>
    <string name="trending">Trending</string>
    <string name="most_view">Most viewed</string>
    <string name="hidden_gems">Hidden gems</string>

    <string name="write_your_feedback">Write Your feedback</string>
    <string name="include_system_logs">Include system logs</string>
    <string name="your_feedback">Your feedback,</string>
    <string name="system_information">system information</string>
    <string name="and_email">and email</string>
    <string name="address_will_be_swnt_to_ted_see_ted_s">address will be swnt to TED. See TED\'s</string>
    <string name="back_arrow">back arrow</string>
    <string name="sendback">sendback</string>
    <string name="create_account">Create account</string>
    <string name="alert_msg">You will be taken to ted.com to create an account</string>
    <string name="ted_com">GO TO TED.COM</string>
    <string name="cancel">cancel</string>
    <string name="pass">Reset password</string>
    <string name="com">You will be taken to ted.com to reset the password</string>
    <string name="recomended_topics">Recomended topics</string>
    <string name="politics">Politics</string>
    <string name="health">Health</string>
    <string name="education">Education</string>
    <string name="show_all_topics">Show all topics</string>
    <string name="recomended_speakers">Recomended speakers</string>
    <string name="show_all_speakers">Show all speakers</string>
    <string name="dan_pallotta">Dan Pallotta</string>
    <string name="c_k_williams">C.K.Williams</string>
    <string name="tea_uglow">Tea Uglow</string>
    <string name="show_all_subtitle_languages">Show all subtitle languages</string>
    <string name="somali">Somali</string>
    <string name="macedonian">Macedonian</string>
    <string name="macedo">Macedo</string>
    <string name="recomended_subtitle_languages">Recomended subtitle languages</string>
    <string name="recomended_events">Recomended events</string>
    <string name="ted2016">TED2016</string>
    <string name="ted2015">TED2015</string>
    <string name="ted2014">TED2014</string>
    <string name="show_all_events">Show all events</string>
    <string name="_11">11</string>
    <string name="_336">336</string>

</resources>


