<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f2eded"
    android:scrollbars="none"
    tools:context=".activity.SearchActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layout_search_main">

        <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:paddingBottom="10dp"
        android:id="@+id/layout_recomend">

        <TextView
            android:id="@+id/tv_recomend"
            android:text="@string/recomended_topics"
            style="@style/SearchMainTextViewStyle"/>

        <ImageView
            android:id="@+id/search_rec_img1"
            android:src="@drawable/ic_local_offer_black_24dp"
            style="@style/SearchImageviewStyle"
            android:layout_below="@+id/tv_recomend"
            android:layout_marginTop="15dp"/>

        <TextView
            android:id="@+id/tv_rec1"
            android:text="@string/politics"
            android:layout_below="@id/tv_recomend"
            style="@style/SearchSmallTextViewStyle"
            android:layout_marginTop="15dp"/>

        <ImageView
            android:src="@drawable/ic_local_offer_black_24dp"
            android:id="@+id/search_rec_img2"
            android:layout_below="@+id/tv_rec1"
            style="@style/SearchImageviewStyle"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/tv_rec2"
            android:text="@string/health"
            android:layout_below="@id/tv_rec1"
            style="@style/SearchSmallTextViewStyle"
            android:layout_marginTop="20dp"/>

        <ImageView
            android:id="@+id/search_rec_img3"
            android:src="@drawable/ic_local_offer_black_24dp"
            android:layout_below="@+id/search_rec_img2"
            style="@style/SearchImageviewStyle"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/tv_rec3"
            android:text="@string/education"
            android:layout_below="@id/tv_rec2"
            style="@style/SearchSmallTextViewStyle"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/tv_recomend2"
            android:text="@string/show_all_topics"
            style="@style/SearchLastTextViewStyle"
            android:layout_below="@id/search_rec_img3" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:layout_marginTop="10dp"
        android:paddingBottom="10dp"
        android:layout_below="@id/layout_recomend"
        android:id="@+id/layout_recomend_speakers">

        <TextView
            android:id="@+id/tv_speak"
            android:text="@string/recomended_speakers"
            style="@style/SearchMainTextViewStyle" />

        <ImageView
            android:id="@+id/speak_img1"
            android:src="@drawable/ic_lens_black_24dp"
            android:layout_below="@+id/tv_speak"
            style="@style/SearchImageviewStyle"
            android:layout_marginTop="15dp"/>

        <TextView
            android:id="@+id/tv_speak1"
            android:text="@string/tea_uglow"
            android:layout_below="@id/tv_speak"
            style="@style/SearchSmallTextViewStyle"
            android:layout_marginTop="17dp"/>

        <ImageView
            android:src="@drawable/ic_lens_black_24dp"
            android:id="@+id/speak_img2"
            android:layout_below="@+id/speak_img1"
            style="@style/SearchImageviewStyle"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/tv_speak2"
            android:text="@string/c_k_williams"
            android:layout_below="@id/tv_speak1"
            style="@style/SearchSmallTextViewStyle"
            android:layout_marginTop="30dp"/>

        <ImageView
            android:src="@drawable/ic_lens_black_24dp"
            android:id="@+id/speak_img3"
            android:layout_below="@+id/speak_img2"
           style="@style/SearchImageviewStyle"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/tv_speak3"
            android:text="@string/dan_pallotta"
            android:layout_below="@id/tv_speak2"
            style="@style/SearchSmallTextViewStyle"
            android:layout_marginTop="30dp"/>

        <TextView
            android:id="@+id/tv_speaker"
            android:text="@string/show_all_speakers"
            style="@style/SearchLastTextViewStyle"
            android:layout_below="@id/speak_img3" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:layout_marginTop="10dp"
        android:paddingBottom="10dp"
        android:id="@+id/layout_sub_lang"
        android:layout_below="@id/layout_recomend_speakers">

        <TextView
            android:id="@+id/tv_sublang"
            android:text="@string/recomended_subtitle_languages"
            style="@style/SearchMainTextViewStyle" />

        <ImageView
            android:src="@drawable/ic_language_black_24dp"
            android:id="@+id/lang_img"
            android:layout_below="@+id/tv_sublang"
            style="@style/SearchImageviewStyle"
            android:layout_marginTop="15dp"/>

        <TextView
            android:id="@+id/tv_lang1"
            android:text="@string/macedo"
            android:layout_below="@id/tv_sublang"
            style="@style/SearchSmallTextViewStyle"
            android:layout_marginTop="15dp"/>

        <TextView
            android:id="@+id/tv_langnum1"
            android:text="@string/_11"
            style="@style/SearchNumTextViewStyle"
            android:layout_below="@id/tv_sublang"
            android:layout_marginTop="15dp"/>

        <ImageView
            android:src="@drawable/ic_language_black_24dp"
            android:id="@+id/lang_img2"
            style="@style/SearchImageviewStyle"
            android:layout_below="@+id/lang_img"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/tv_lang2"
            android:text="@string/macedonian"
            style="@style/SearchSmallTextViewStyle"
            android:layout_below="@id/tv_lang1"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/tv_langnum2"
            android:text="@string/_336"
            style="@style/SearchNumTextViewStyle"
            android:layout_below="@id/tv_lang1"
            android:layout_marginTop="20dp"/>

        <ImageView
            android:src="@drawable/ic_language_black_24dp"
            android:id="@+id/lang_img3"
            style="@style/SearchImageviewStyle"
            android:layout_below="@+id/lang_img2"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/tv_lag3"
            android:text="@string/somali"
            style="@style/SearchSmallTextViewStyle"
            android:layout_below="@id/tv_lang2"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/tv_lagnum3"
            android:text="20"
            style="@style/SearchNumTextViewStyle"
            android:layout_below="@id/tv_lang2"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/tv_sublang1"
            android:text="@string/show_all_subtitle_languages"
            style="@style/SearchLastTextViewStyle"
            android:layout_below="@id/lang_img3" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:id="@+id/layout_events"
        android:layout_marginTop="10dp"
        android:paddingBottom="10dp"
        android:layout_below="@id/layout_sub_lang">

        <TextView
            android:id="@+id/tv_events"
            android:text="@string/recomended_events"
            style="@style/SearchMainTextViewStyle"/>

        <ImageView
            android:src="@drawable/ic_event_black_24dp"
            android:id="@+id/event_img"
            style="@style/SearchImageviewStyle"
            android:layout_below="@+id/tv_events"
            android:layout_marginTop="15dp"/>

        <TextView
            android:id="@+id/tv_event1"
            android:text="@string/ted2016"
            android:layout_below="@id/tv_events"
            style="@style/SearchSmallTextViewStyle"
            android:layout_marginTop="15dp"/>

        <ImageView
            android:src="@drawable/ic_event_black_24dp"
            android:id="@+id/event_img2"
            android:layout_below="@+id/event_img"
            style="@style/SearchImageviewStyle"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/tv_event2"
            android:text="@string/ted2015"
            style="@style/SearchSmallTextViewStyle"
            android:layout_below="@id/tv_event1"
            android:layout_marginTop="20dp"/>

        <ImageView
            android:src="@drawable/ic_event_black_24dp"
            android:id="@+id/event_img3"
            android:layout_below="@+id/event_img2"
           style="@style/SearchImageviewStyle"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/tv_event3"
            android:text="@string/ted2014"
            style="@style/SearchSmallTextViewStyle"
            android:layout_below="@id/tv_event2"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/tv_eventsa1"
            android:text="@string/show_all_events"
            style="@style/SearchLastTextViewStyle"
            android:layout_below="@id/event_img3" />

    </RelativeLayout>

    </RelativeLayout>

</ScrollView>