<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="120dp"
        android:text="@string/textview"
        android:textSize="15dp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/textView"
        android:layout_marginTop="150dp"
        android:text="@string/textview2"
        android:textSize="12dp"
        android:textStyle="normal"
        android:textColor="@color/colorPrimary"/>
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/textView2"
        android:layout_marginTop="150dp"
        android:text="@string/textview3"
        android:textSize="12dp"
        android:textStyle="normal"
        android:layout_marginLeft="70dp"
        android:layout_toRightOf="@id/textView2"
        android:textColor="@color/colorPrimary"/>
    <TextView
        android:id="@+id/textViewOptions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/dots"
        android:layout_marginLeft="160dp"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="140dp"
        android:textAppearance="?android:textAppearanceLarge"/>

</RelativeLayout>